# NeMo-Skills

./: CONTRIBUTING.md  mkdocs.yml  pyproject.toml
.github/workflows/: gpu_tests.yml  lint.yml  tests.yml
cluster_configs/: example-local.yaml
core/: requirements.txt
dockerfiles/: Dockerfile.nemo-skills  Dockerfile.sandbox  Dockerfile.vllm  README.md
dockerfiles/sandbox/: block_network.c  start-with-nginx.sh
docs/basics/: code-packaging.md  installation.md
docs/evaluation/: index.md
nemo_skills/: __init__.py
nemo_skills/code_execution/local_sandbox/: local_sandbox_server.py  start_local_sandbox.sh
nemo_skills/dataset/: utils.py
nemo_skills/dataset/compute-eval/: prepare.py
nemo_skills/dataset/hotpotqa_closedbook/: prepare.py
nemo_skills/dataset/icpc/: __init__.py
nemo_skills/dataset/ioi/: __init__.py
nemo_skills/dataset/livecodebench/: __init__.py
nemo_skills/dataset/livecodebench-cpp/: __init__.py
nemo_skills/dataset/livecodebench-pro/: __init__.py
nemo_skills/evaluation/evaluator/: __init__.py  compute_eval.py  livecodebench.py  scicode.py
nemo_skills/evaluation/metrics/: map_metrics.py
nemo_skills/inference/eval/: bfcl.py  swebench.py
nemo_skills/inference/model/: __init__.py
nemo_skills/inference/server/: serve_vllm.py  serve_vllm_dp_ray.py
nemo_skills/mcp/servers/: python_tool.py
nemo_skills/pipeline/: cli.py  dataset.py  nemo_gym_rollouts.py
nemo_skills/pipeline/utils/: __init__.py  declarative.py  exp.py  packager.py  scripts.py  server.py
nemo_skills/pipeline/utils/scripts/: __init__.py  base.py  generation.py  nemo_gym.py  server.py
requirements/: main.txt  pipeline.txt
tests/: test_dependency_isolation.py  test_mcp_clients.py  test_pipeline_utils.py  test_sandbox_fork_exc_leak.py  test_sandbox_network_blocking.py
tests/gpu-tests/: test-local.yaml  test_eval.py  test_nemo_gym_rollouts.py
tests/slurm-tests/: run_all.sh
tests/slurm-tests/nano_30b_tool_calling/: run_test.py
tests/slurm-tests/super_120b_aime25/: check_results.py  run_test.py  trtllm-extra-llm-api-config.yml
tests/slurm-tests/wmt24pp_gym_topology/: README.md  check_results.py  run_test.py
tools/: pyproject.toml  requirements.txt
