# Copyright (c) 2025, NVIDIA CORPORATION.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]

name = "nemo-skills-tools"
description = "NeMo Skills tools runtime -- ToolManager and built-in tools without model-client dependencies"
readme = {text = "NeMo Skills tools runtime for ToolManager and built-in tools such as DirectPythonTool. This Phase 1 package reuses the existing MCP/runtime module layout, so it may include some structural transitive dependencies beyond the absolute minimum, but it intentionally excludes model-client dependencies such as LiteLLM and OpenAI.", content-type = "text/plain"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://nvidia-nemo.github.io/Skills"
source = "https://github.com/NVIDIA-NeMo/Skills"
issues = "https://github.com/NVIDIA-NeMo/Skills/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [".."]
include = ["nemo_skills*"]
exclude = ["tests", "tests.*", "core", "core.*", "tools", "tools.*"]

[tool.setuptools.dynamic]
version = { attr = "nemo_skills.version.__version__" }
dependencies = {file = ["requirements.txt"]}
